// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

table .emotion-0 {
  margin: 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.emotion-3 * {
  border: 0!important;
  min-height: unset!important;
  padding: 0!important;
}

.emotion-4 {
  padding: 0 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 32px;
  line-height: 24px;
  height: unset;
  padding: 10px 8px;
  width: 5%;
}

.emotion-4:focus-visible {
  box-shadow: inset;
}

.emotion-4:last-child {
  padding-right: 24px;
}

.emotion-4 div {
  font-size: 13px;
  font-weight: 600;
  height: unset;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: min-height,max-height,opacity;
  height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-6 {
  padding: 0 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 24px;
  height: unset;
  padding: 10px 8px;
  width: 10%;
}

.emotion-6:focus-visible {
  box-shadow: inset;
}

.emotion-6:last-child {
  padding-right: 24px;
}

.emotion-6 div {
  font-size: 13px;
  font-weight: 600;
  height: unset;
}

.emotion-8 {
  padding: 0 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 24px;
  height: unset;
  padding: 10px 8px;
  width: 15%;
}

.emotion-8:focus-visible {
  box-shadow: inset;
}

.emotion-8:last-child {
  padding-right: 24px;
}

.emotion-8 div {
  font-size: 13px;
  font-weight: 600;
  height: unset;
}

.emotion-10 {
  padding: 0 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 24px;
  height: unset;
  padding: 10px 8px;
  width: 20%;
}

.emotion-10:focus-visible {
  box-shadow: inset;
}

.emotion-10:last-child {
  padding-right: 24px;
}

.emotion-10 div {
  font-size: 13px;
  font-weight: 600;
  height: unset;
}

.emotion-12 {
  padding: 0 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 24px;
  height: unset;
  padding: 10px 8px;
  width: 30%;
}

.emotion-12:focus-visible {
  box-shadow: inset;
}

.emotion-12:last-child {
  padding-right: 24px;
}

.emotion-12 div {
  font-size: 13px;
  font-weight: 600;
  height: unset;
}

.emotion-16 {
  padding: 0 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 24px;
  overflow-wrap: anywhere;
  word-break: break-word;
  padding: 10px 8px;
  vertical-align: top;
}

.emotion-16:focus-visible {
  box-shadow: inset;
}

.emotion-16:last-child {
  padding-right: 24px;
}

.emotion-16>div {
  max-height: unset;
  min-height: unset;
  line-height: 20px;
}

.emotion-16 * {
  font-size: 13px!important;
}

.emotion-16>div {
  max-height: unset;
  display: block;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: min-height,max-height,opacity;
  opacity: 1;
  min-height: 40px;
  max-height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
      data="[object Object]"
    >
      <thead
        class="emotion-2"
      >
        <tr
          class="emotion-3"
        >
          <th
            class="emotion-4"
            scope="col"
          >
            <div
              class="emotion-5"
            >
              <div />
            </div>
          </th>
          <th
            class="emotion-6"
            scope="col"
          >
            <div
              class="emotion-5"
            >
              <div />
            </div>
          </th>
          <th
            class="emotion-8"
            scope="col"
          >
            <div
              class="emotion-5"
            >
              <div />
            </div>
          </th>
          <th
            class="emotion-10"
            scope="col"
          >
            <div
              class="emotion-5"
            >
              <div />
            </div>
          </th>
          <th
            class="emotion-12"
            scope="col"
          >
            <div
              class="emotion-5"
            >
              <div />
            </div>
          </th>
          <th
            class="emotion-10"
            scope="col"
          >
            <div
              class="emotion-5"
            >
              <div />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
        >
          <td
            cellindex="0"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                notebook
              </div>
            </div>
          </td>
          <td
            cellindex="1"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                50
              </div>
            </div>
          </td>
          <td
            cellindex="2"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            cellindex="3"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                A
              </div>
            </div>
          </td>
          <td
            cellindex="4"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                college-ruled,perforated
              </div>
            </div>
          </td>
          <td
            cellindex="5"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                8
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

table .emotion-0 {
  margin: 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.emotion-3 {
  padding: 0 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 32px;
  line-height: 24px;
  height: unset;
  padding: 10px 8px;
}

.emotion-3:focus-visible {
  box-shadow: inset;
}

.emotion-3:last-child {
  padding-right: 24px;
}

.emotion-3 div {
  font-size: 13px;
  font-weight: 600;
  height: unset;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: min-height,max-height,opacity;
  height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-5 {
  padding: 0 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 24px;
  height: unset;
  padding: 10px 8px;
}

.emotion-5:focus-visible {
  box-shadow: inset;
}

.emotion-5:last-child {
  padding-right: 24px;
}

.emotion-5 div {
  font-size: 13px;
  font-weight: 600;
  height: unset;
}

.emotion-15:nth-of-type(even) {
  background-color: #F9FBFA;
}

.emotion-16 {
  padding: 0 8px;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 24px;
  overflow-wrap: anywhere;
  word-break: break-word;
  padding: 10px 8px;
  vertical-align: top;
}

.emotion-16:focus-visible {
  box-shadow: inset;
}

.emotion-16:last-child {
  padding-right: 24px;
}

.emotion-16>div {
  max-height: unset;
  min-height: unset;
  line-height: 20px;
}

.emotion-16 * {
  font-size: 13px!important;
}

.emotion-16>div {
  max-height: unset;
  display: block;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: min-height,max-height,opacity;
  opacity: 1;
  min-height: 40px;
  max-height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
      data="[object Object],[object Object],[object Object],[object Object],[object Object]"
    >
      <thead
        class="emotion-2"
      >
        <tr
          class=""
        >
          <th
            class="emotion-3"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                name
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                quantity
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                size
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                status
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                tags
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                rating
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="emotion-15"
        >
          <td
            cellindex="0"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                journal
              </div>
            </div>
          </td>
          <td
            cellindex="1"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                25
              </div>
            </div>
          </td>
          <td
            cellindex="2"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                14x21,cm
              </div>
            </div>
          </td>
          <td
            cellindex="3"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                A
              </div>
            </div>
          </td>
          <td
            cellindex="4"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                brown, lined
              </div>
            </div>
          </td>
          <td
            cellindex="5"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                9
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <td
            cellindex="0"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                notebook
              </div>
            </div>
          </td>
          <td
            cellindex="1"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                50
              </div>
            </div>
          </td>
          <td
            cellindex="2"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            cellindex="3"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                A
              </div>
            </div>
          </td>
          <td
            cellindex="4"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                college-ruled,perforated
              </div>
            </div>
          </td>
          <td
            cellindex="5"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                8
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <td
            cellindex="0"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                paper
              </div>
            </div>
          </td>
          <td
            cellindex="1"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                100
              </div>
            </div>
          </td>
          <td
            cellindex="2"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            cellindex="3"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                D
              </div>
            </div>
          </td>
          <td
            cellindex="4"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                watercolor
              </div>
            </div>
          </td>
          <td
            cellindex="5"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                10
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <td
            cellindex="0"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                planner
              </div>
            </div>
          </td>
          <td
            cellindex="1"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                75
              </div>
            </div>
          </td>
          <td
            cellindex="2"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                22.85x30,cm
              </div>
            </div>
          </td>
          <td
            cellindex="3"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                D
              </div>
            </div>
          </td>
          <td
            cellindex="4"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                2019
              </div>
            </div>
          </td>
          <td
            cellindex="5"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                10
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <td
            cellindex="0"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                postcard
              </div>
            </div>
          </td>
          <td
            cellindex="1"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                45
              </div>
            </div>
          </td>
          <td
            cellindex="2"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                10x,cm
              </div>
            </div>
          </td>
          <td
            cellindex="3"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                D
              </div>
            </div>
          </td>
          <td
            cellindex="4"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                double-sided,white
              </div>
            </div>
          </td>
          <td
            cellindex="5"
            class="emotion-16"
          >
            <div
              class="emotion-17"
            >
              <div>
                2
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
